# warpx-metal

./: .gitignore  LICENSE  README.md  VALIDATION.md  readme-apple-silicon-port-upstream.md
.github/workflows/: portability.yml
benchmarks/: RESULTS.md
benchmarks/inputs/: langmuir_2d_bench.txt  langmuir_3d_bench.txt
ci/: README.md  run-local-ci.sh
docs/: known-issues.md  spec.md
patches/adaptivecpp/: 0001-metal-fallback-msl-3.2-for-older-metal-cpp-headers.patch  0003-metal-emit-struct-defs-for-array-elements.patch  0004-increase-worker-thread-stack-size-for-jit.patch  0005-metal-fix-phi-cycle-recursion-and-array-struct-deps.patch  0006-metal-warpx-runtime-fixes.patch  0008-metal-all-warpx-fixes.patch  0008-metal-source-identity.patch  0009-metal-batch-command-buffer.patch  0010-metal-dtoh-fast-path.patch  0011-metal-pointer-translation-runtime-fixes.patch  0018-metal-d2h-shared-event-completion.patch  0019-metal-inorder-d2h-timeout.patch
patches/amrex/: 0002-amrex-sscp-atomic-fix.patch  (+4 more)
patches/amrex-post/: 0004-metal-pic-rng-reduction-fixes.patch
reports/: adaptivecpp-d2h-shared-event-completion.md  adaptivecpp-metal-inorder-readback.md  addplasma-parser-momentum-oob.md  macos-memory-crashguard.md  metal-process-isolated-recovery.md
scripts/: 00-install-deps.sh  01-build-adaptivecpp.sh  02-validate-metal.sh  03-build-amrex.sh  04-validate-amrex.sh  05-build-warpx.sh  06-validate-warpx.sh  07-build-warpx-cpu.sh  08-benchmark.sh  09-profile-metal.sh  10-run-warpx-resilient.py  env.sh
tests/amrex/heat_equation/: CMakeLists.txt  inputs  main.cpp
(+20 files in other folders)
